WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266726
Wikipedia video control icon backgrounds flicker
https://bugs.webkit.org/show_bug.cgi?id=266726
Summary
Wikipedia video control icon backgrounds flicker
Matt Woodrow
Reported
2023-12-20 13:29:50 PST
<
rdar://119868478
>
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2023-12-20 13:34:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22130
EWS
Comment 2
2023-12-20 17:25:52 PST
Committed
272394@main
(5ce41d80d507): <
https://commits.webkit.org/272394@main
> Reviewed commits have been landed. Closing PR #22130 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug