Wikipedia video control icon backgrounds flicker. https://bugs.webkit.org/show_bug.cgi?id=266726 <rdar://119868478>

Reviewed by Simon Fraser.

The previous code always required a full repaint of the layer whenever a buffer was allocated,
so the copy-forward code didn't run on the second paint of a layer. This meant the copy-forward
code, and the 'buffer is already clear' optimization were mutually exclusive.

The new code uses copy-forward and partial repaints whenever possible, even if the front buffer
was newly allocated (or existing, but purged).

The copy-forward code tries to only copy pixels that won't be re-drawn this frame, but is rounded
out to a single rectangle, not a complex region.

If the copy-forwards ends up copying pixels that we'll also drawn this frame, we can no longer
consider the buffer to be 'clear' and have to manually clear the paint region.

* LayoutTests/compositing/repaint/copy-forward-clear-rect-expected.html: Added.
* LayoutTests/compositing/repaint/copy-forward-clear-rect.html: Added.
* Source/WebKit/GPUProcess/graphics/RemoteImageBufferSet.cpp:
(WebKit::RemoteImageBufferSet::prepareBufferForDisplay):

Canonical link: https://commits.webkit.org/272394@main