Source/WebKit/GPUProcess/graphics/RemoteImageBufferSet.cpp
@@ -188,12 +188,13 @@ void RemoteImageBufferSet::prepareBufferForDisplay(const WebCore::Region& dirtyR
     GraphicsContext& context = m_frontBuffer->context();
     context.resetClip();
 
+    FloatRect copyRect;
     if (m_previousFrontBuffer && m_frontBuffer != m_previousFrontBuffer) {
         IntRect enclosingCopyRect { m_previouslyPaintedRect ? *m_previouslyPaintedRect : enclosingIntRect(bufferBounds) };
         if (!dirtyRegion.contains(enclosingCopyRect)) {
             Region copyRegion(enclosingCopyRect);
             copyRegion.subtract(dirtyRegion);
-            FloatRect copyRect = intersection(copyRegion.bounds(), bufferBounds);
+            copyRect = intersection(copyRegion.bounds(), bufferBounds);
             if (!copyRect.isEmpty())
                 m_frontBuffer->context().drawImageBuffer(*m_previousFrontBuffer, copyRect, copyRect, { CompositeOperator::Copy });
         }
@@ -215,6 +216,11 @@ void RemoteImageBufferSet::prepareBufferForDisplay(const WebCore::Region& dirtyR
         scaledRect = enclosingIntRect(scaledRect);
         scaledRect.scale(1 / m_resolutionScale);
         paintingRects.append(scaledRect);
+
+        // If the copy-forward touched pixels that are about to be painted, then they
+        // won't be 'clear' any more.
+        if (copyRect.intersects(scaledRect))
+            m_frontBufferIsCleared = false;
     }
 
     if (paintingRects.size() == 1)
